After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701523 - GtkSearchBar: Mention we don't handle Ctrl+F for the app
GtkSearchBar: Mention we don't handle Ctrl+F for the app
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-06-03 13:08 UTC by Bastien Nocera
Modified: 2013-06-14 17:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkSearchBar: Mention we don't handle Ctrl+F for the app (1.22 KB, patch)
2013-06-03 13:08 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-06-03 13:08:41 UTC
.
Comment 1 Bastien Nocera 2013-06-03 13:08:43 UTC
Created attachment 245919 [details] [review]
GtkSearchBar: Mention we don't handle Ctrl+F for the app

There's probably an expectation from the app developers that
Ctrl+F or similar common shortcuts for starting a search will
be handled by the widget, when this is not the case. Explicitely
mention it in the docs to avoid confusion.
Comment 2 Bastien Nocera 2013-06-14 17:11:26 UTC
Attachment 245919 [details] pushed as 3d11b9b - GtkSearchBar: Mention we don't handle Ctrl+F for the app